Fix navbar items to align appropriately

--- a/scss/atoms/_grids.scss
+++ b/scss/atoms/_grids.scss
@@ -59,5 +59,12 @@ $total-columns: 16;
 }
 
 .content-main {
+  padding-left: 150px;
+}
+
+.sidebar-primary {
+  position: fixed;
+
   float: left;
+  width: 150px;
 }
