--- a/scss/templates/sidenav/_sidenav.scss
+++ b/scss/templates/sidenav/_sidenav.scss
@@ -51,10 +51,15 @@
 }
 
 .sidebar-primary {
+  @include full-height();
+
+  position: fixed;
+
+  float: left;
   width: 150px;
+
   padding-top: 1em;
 
-  @include full-height();
   background: $black-2;
 }
 
